# ostfnprjkt

./: .gitignore  .python-version  README.md  constants.py  hello.py  pyproject.toml  roadmap.md
.streamlit/: secrets.toml.templ
config/: config.yaml
fan_tool/config/: config.yaml
fan_tool/measuring_assets/: measuring.py  test_prop.py
fan_tool/measuring_assets/utils/: measuring_utils.py
src/: 1_monitoring.py  3_file_download_and_settings.py  __main__.py  backend.py  config.yaml  data_collector.py  entrypoint.py  frontend.py  login_page.py  run.py  utils.py
src/config/: config.yaml  default_config.yaml
src/measuring_assets/: measuring.py  test_prop.py
src/measuring_assets/utils/: measuring_utils.py
src/ostfnprjkt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/plotting_assets/: plotting.py
src/temperature_control/: backend.py  frontend.py
src/temperature_control/_measuring_assets/: test_prop.py
src/temperature_control/config/: config.yaml  default_config.yaml
src/temperature_control/measuring_assets/: measuring.py
src/temperature_control/measuring_assets/utils/: measuring_utils.py
src/temperature_control/utils/: backend_utils.py  measurering_utils.py  plots.py  sql_utils.py  streamlit_utils.py  streamlit_widgets.py  test_utils.py
src/temperature_control/web_pages/: 1_Monitoring.py  1_monitoring.py  3_File_Download_And_Settings.py
src/utils/: backend_utils.py  general_utils.py  measurering_utils.py  sql_utils.py  stat_utils.py
src/web_pages/: 1_monitoring.py  3_file_download_and_settings.py
