[project]
name = "ostfnprjkt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "streamlit>=1.40.1",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["setuptools~=75.1.0"]

build_backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where= ["src"]

[tool.setuptools.package-data]
# Include arbitrary files in package.
"*" = ["*.yaml", "*.txt"]


[project.scripts]
cooling_app = "ostfnprjkt.backend:main"

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pre-commit~=4.0.0",
]
